feat: Add Microsoft Copilot-style 3-sidebar browser extension with WebSocket integration

--- a/code/apps/extension-chromium/src/popup.html
+++ b/code/apps/extension-chromium/src/popup.html
@@ -1,2 +1,11 @@
-<!doctype html><html><head><meta charset='UTF-8'><title>Optimando Helper</title></head>
-<body><div id='app'></div><script type='module' src='popup.tsx'></script></body></html>
+<!doctype html>
+<html lang="de">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Optimando Helper</title>
+  </head>
+  <body>
+    <div id="app"></div>  <!-- vorher: id="root" -->
+    <script type="module" src="./popup.tsx"></script>
+  </body>
+</html>
