Brand: rename to OpenGiraffe across extension, desktop, shared; update electron-vite UI

--- a/code/apps/desktop/index.html
+++ b/code/apps/desktop/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Optimando Desktop App</title>
+    <title>OpenGiraffe Desktop App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 Optimando Desktop App</h1>
+        <h1>🚀 OpenGiraffe Desktop App</h1>
         
         <div class="card">
             <h2>✅ WebSocket-Server läuft!</h2>
