--- a/code/apps/extension-chromium/src/popup.html
+++ b/code/apps/extension-chromium/src/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Optimando AI Extension</title>
+    <title>OpenGiraffe Extension</title>
     <style>
         body {
             width: 320px;
@@ -95,7 +95,7 @@
     </style>
 </head>
 <body>
-    <h1>🤖 Optimando AI</h1>
+    <h1>🦒 OpenGiraffe</h1>
     
     <div class="status">
         <div>
