extension: update LmGTFY pencil tooltip text across docked, floating, and popup

--- a/code/apps/extension-chromium/public/popup.html
+++ b/code/apps/extension-chromium/public/popup.html
@@ -91,7 +91,7 @@
         <input id="file" type="file" multiple style="display:none" />
         <button id="up" class="btn" title="Attach">📎</button>
         <button id="mic" class="btn" title="Voice input">🎙️</button>
-        <button id="lm-pencil" class="btn" title="LmGTFY - Select an area to capture the stream and automatically analyse its content">✎</button>
+        <button id="lm-pencil" class="btn" title="LmGTFY - Capture a screen area as screenshot or stream and send it to your pre-defined automation tasks.">✎</button>
         <button id="send" class="btn send">Send</button>
       </div>
     </div>
