--- a/code/apps/extension-chromium/src/sidepanel.html
+++ b/code/apps/extension-chromium/src/sidepanel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenGiraffe Orchestrator</title>
+    <title>OpenGiraffe</title>
     <style>
         /* Theme-colored scrollbar */
         * {
