feat: Make all agent box forms responsive with scrollbars + popup chat theme support
- Fixed agent box setup forms to be responsive on small laptop screens
- Added max-height (90vh), fixed header/footer, scrollable content area
- Reduced form spacing for better compactness
- Applied fixes to all 5 agent box dialogs:
  * Sidebar 'Add New Agent Box' (content-script.tsx)
  * Sidebar 'Edit Agent Box' (content-script.tsx)
  * Display grid slot editors (grid-script.js, grid-script-v2.js)
- Popup command chat now respects selected theme colors
- Updated popup.html with pure purple gradient matching sidebar
- Popup theme switches instantly with sidepanel theme
- All Save/Cancel buttons now always visible at bottom
- Vertical scrollbar appears when content exceeds viewport height

--- a/code/apps/extension-chromium/public/popup.html
+++ b/code/apps/extension-chromium/public/popup.html
@@ -19,16 +19,16 @@
       }
       .theme-default{
         /* Purple gradient like extension default */
-        --bg-grad: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        --bg-grad: linear-gradient(135deg, #8b5cf6 0%, #764ba2 100%);
         --bg:#1e1b4b; /* fallback under gradient */
         --text:#ffffff;
-        --surface: rgba(255,255,255,0.10);
+        --surface: rgba(118,75,162,0.25);
         --border: rgba(255,255,255,0.20);
         --muted: rgba(255,255,255,0.85);
-        --btn-surface: rgba(255,255,255,0.15);
+        --btn-surface: rgba(118,75,162,0.35);
         --bubble-user-bg: rgba(34,197,94,0.14);
         --bubble-user-border: rgba(34,197,94,0.55);
-        --bubble-assist-bg: rgba(255,255,255,0.12);
+        --bubble-assist-bg: rgba(118,75,162,0.20);
         --bubble-assist-border: rgba(255,255,255,0.22);
       }
       .theme-professional{
@@ -82,7 +82,7 @@
       .send { font-weight:800; }
       .bucket { border-color:#ef4444; color:#ef4444; background: var(--surface); }
       /* Theme-specific send button styling */
-      body.theme-default .send { background: linear-gradient(135deg,#667eea,#764ba2); border:1px solid rgba(255,255,255,0.30); color:#ffffff; }
+      body.theme-default .send { background: linear-gradient(135deg,#8b5cf6,#764ba2); border:1px solid rgba(255,255,255,0.30); color:#ffffff; }
       body.theme-dark .send { background: linear-gradient(135deg,#334155,#1e293b); border:1px solid rgba(255,255,255,0.20); color:#e5e7eb; }
       body.theme-professional .send { background: linear-gradient(135deg,#ffffff,#f1f5f9); border:1px solid #cbd5e1; color:#0f172a; }
     </style>
