Update default theme: stronger purple gradient and fix display grid colors to match sidebar

--- a/code/apps/extension-chromium/public/grid-display-v2.html
+++ b/code/apps/extension-chromium/public/grid-display-v2.html
@@ -110,9 +110,9 @@
             actionBtnBg = 'linear-gradient(135deg, #94a3b8 0%, #64748b 100%)';
             actionBtnText = '#ffffff';
         } else {
-            bodyBg = 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)';
+            bodyBg = 'linear-gradient(135deg, #c084fc 0%, #a855f7 50%, #9333ea 100%)';
             bodyText = '#ffffff';
-            actionBtnBg = 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)';
+            actionBtnBg = 'linear-gradient(135deg, #c084fc 0%, #a855f7 50%, #9333ea 100%)';
             actionBtnText = '#ffffff';
         }
         
@@ -202,7 +202,7 @@
                     textColor = '#1e293b';
                     slotBg = 'white';
                 } else {
-                    headerColor = '#667eea';
+                    headerColor = 'linear-gradient(135deg, #c084fc 0%, #a855f7 50%, #9333ea 100%)';
                     textColor = 'white';
                     slotBg = 'white';
                 }
