--- a/code/apps/extension-chromium/public/popup.html
+++ b/code/apps/extension-chromium/public/popup.html
@@ -18,8 +18,8 @@
         --bubble-assist-border:rgba(255,255,255,0.20);
       }
       .theme-default{
-        /* Purple gradient like extension default */
-        --bg-grad: linear-gradient(135deg, #8b5cf6 0%, #764ba2 100%);
+        /* Purple gradient like extension default - stronger gradient */
+        --bg-grad: linear-gradient(135deg, #c084fc 0%, #a855f7 50%, #9333ea 100%);
         --bg:#1e1b4b; /* fallback under gradient */
         --text:#ffffff;
         --surface: rgba(118,75,162,0.25);
