fix: Update Augmented Overlay hint text - 'or' instead of 'and'
Changed: 'Point with the cursor and select elements...'
To: 'Point with the cursor or select elements...'

Updated in all locations:
- sidepanel.tsx (3 occurrences)
- content-script.tsx (2 occurrences - ccd and ccf)
- public/popup.html

--- a/code/apps/extension-chromium/public/popup.html
+++ b/code/apps/extension-chromium/public/popup.html
@@ -226,7 +226,7 @@
         <div id="overlay-msgs" class="messages">
           <div class="overlay-hint">
             <span class="overlay-hint-icon">🎯</span>
-            <span>Point with the cursor and select elements in order to ask questions or trigger automations directly in the UI.</span>
+            <span>Point with the cursor or select elements in order to ask questions or trigger automations directly in the UI.</span>
           </div>
         </div>
         <div class="composer">
