feat: Theme-aware selectboxes, enterprise naming, WR Login buttons, session ID styling fixes

--- a/code/apps/extension-chromium/public/popup.html
+++ b/code/apps/extension-chromium/public/popup.html
@@ -192,11 +192,11 @@
             <option value="augmented-overlay">🎯 Augmented Overlay</option>
             <option value="mailguard">🛡️ WR MailGuard</option>
           </select>
-          <select id="submode-select" class="mode-select" style="width:75px; background:rgba(55,65,81,0.85) !important; font-size:11px; padding:6px 18px 6px 6px; text-overflow:ellipsis;">
+          <select id="submode-select" class="mode-select" style="width:85px; background:rgba(55,65,81,0.85) !important; font-size:11px; padding:6px 18px 6px 6px; text-overflow:ellipsis;">
             <option value="command">cmd</option>
-            <option value="p2p-chat">P2P Chat</option>
-            <option value="p2p-stream">P2P Live</option>
-            <option value="group-stream">Group Stream</option>
+            <option value="p2p-chat">Direct Chat</option>
+            <option value="p2p-stream">Live Views</option>
+            <option value="group-stream">Group Sessions</option>
             <option value="admin">Admin</option>
           </select>
         </div>
