--- a/code/apps/extension-chromium/public/popup.html
+++ b/code/apps/extension-chromium/public/popup.html
@@ -538,7 +538,8 @@
       </div>
     </div>
     <!-- All scripting moved to popup.js to satisfy extension CSP -->
-    <script src="popup.js"></script>
+    <!-- Cache bust: v2025.01.29 -->
+    <script src="popup.js?v=20250129-006"></script>
   </body>
   </html>
 
