--- a/code/apps/electron-vite-project/index.html
+++ b/code/apps/electron-vite-project/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/giraffe.svg" />
+    <link rel="icon" type="image/svg+xml" href="/wrcode-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenGiraffe™ Analysis Dashboard</title>
+    <title>WR Code™ Analysis Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
